--- a/deployment.yml
+++ b/deployment.yml
@@ -14,7 +14,7 @@ spec:
   spec: 
    containers:
    - name: c1
-     image: gauravkumar9130/cdot-web:V110
+     image: gauravkumar9130/cdot-web:v112
      imagePullPolicy: Always
      stdin: true
      tty: true
